# notebook-ops

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  rsyncignore.txt
docs/ja/: README.md
scripts/: rename.sh  run.py  run.sh  setup.sh
src/lib/: hello_world.py  utils.py
src/notebooks/: train.ipynb
