[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = ""
authors = ["your_name <your_email>"]
readme = "README.md"
packages = [{include = "your_package_name"}]

[tool.poetry.dependencies]
python = "^3.8"
papermill = "2.4.0"
python-dotenv = "0.21.0"
black = "22.12.0"
isort = "5.11.4"
jupyterlab = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
